--- a/cambio-contraseña.css
+++ b/cambio-contraseña.css
@@ -1,111 +1,208 @@
 *{
     margin: 0;
     padding: 0;
-}
+    box-sizing: border-box;
 
+}
 body{
     display: flex;
-    flex-direction: column;
     height: 100vh;
+    font-family: 'Courier New', Courier, monospace;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
     padding: 1rem;
-    overflow: hidden;
+    
 }
-.container{
+
+
+/*contenedor principal*/
+.registro{
     display: flex;
     flex-direction: column;
-    padding: 1rem;
-    border: #22a374 1px solid;
+    
+    background-color:  #ffffff57;
     text-transform: capitalize;
-    gap: 1em;
-
-}
-
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4rem;
-   
     
-
-}
-hr{
-    background-color: #22a374;
-    height: 1px;
-    border: transparent;
-
-}
-
-#icon{
-    display: flex;
-    color: #22a374;
-    position: absolute;
-    margin-top: 1em;
-    margin-left: 0.5em;
-    line-height: normal;
-    font-size: 1.1rem;
-      
-}
-#icon:hover{
-    color: lightskyblue;
-}
-
-input[type="password"]{
-    display: flex;
-   
-    font-size: 1.1em;
-    outline: none;
-    height: 3rem;
-    padding-left: 2em;
-    background-color: transparent;
-    border: #22a374 1px solid;
-    color: #22a374;
-    text-transform: lowercase;
+    border: 2px solid #33a892;
+    
+    border-radius: 1em;
+    
     
 }
-input:hover{
-    color: #22a374;
-  
-    
-}
-input::placeholder{
-    color: #22a374;
-}
-
-
-.buttons{
+#container{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    
+    padding: 1em;
+    gap: 1.5em;
 }
-button{
+.email{
     display: flex;
-    border-radius: 1rem;
-    border: 0;
+    flex: 1;
+    flex-direction: column;
+}
+#email{
+    display: flex;
+    flex: 1;
+}
+
+input[type="email"]{
+    display: flex;
+   
+    
+    outline: none;
+    height: 2rem;
+    padding-left: 1em;
     background-color: transparent;
-    font-weight: bolder;
-    font-size: 15px;
-    
+    border: #000 1px solid;
+    color: #22a374;
+    text-transform: capitalize;
+    text-decoration: none;
 }
-.buttonconfi{
+
+input[type="text"]{
     display: flex;
-     
+   
+    
+    outline: none;
+    height: 2rem;
+    padding-left: 1em;
+    background-color: transparent;
+    border: #000 1px solid;
+    color: #22a374;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+input{
+    height: 2em;
+}
+#title{
+    display: flex;
+    background-color: #33a892;
     justify-content: center;
     align-items: center;
-    color: #fff;
-    border-radius: 1rem;
-    background-color: #22a374;
+    font-weight: bold;
+    position: relative;
+    height: 4em;
+    border-top-right-radius: 0.6em;
+    border-top-left-radius: 0.6em;
+}
+.fa-arrow-left-long{
+    display: flex;
+    
+    position: absolute;
+    top: 25px;
+    left: 1%;
+    color: #fffefe;
+    font-size: 1.2em;
+}
+#dataname{
+    display: flex;
     flex: 1;
-    padding: 1.5rem;
-    text-decoration: none;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+.name{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    height: 3em;
+    
+}
+
+
+
+
+
+#document{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 0.5em;
+   
+
+}
+.typedoc{
+    display: flex;
+    gap: 0.5em;
+    flex-wrap: 1;
+}
+
+.typedc{
+    display: flex;
     text-transform: uppercase;
 }
-.buttonconfi:hover{
-     color: #22a374;
-     background-color: #fff;
-     border: #22a374 1px solid;
+.numberdoc{
+    display: flex;
+    flex: 1;
+}
+
+
+
+.datedata{
+    display: flex;
+    gap: 1em; 
+    flex: 1;   
+}
+
+#date{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    
+}
+.fecha{
+    display: flex;
+    width: 100%;
+    height: 2em;
+}
+#eps{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 1REM;
+}
+
+#active{
+    display: flex;
+    flex: 1;
+    gap: 1rem;
+    justify-content: space-between;
+}
+.registrobutton{
+    display: flex;
+    flex: 1;
+}
+#button{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    background-color: #6d93c9;
+    border: 0;
+    height: 3rem;
+    color: #fff;
+    border-radius: 1em;
+    
+}
+#button:hover{
+    color: #6d93c9;
+    background-color: #fff;
+    border: 2px solid#6d93c9;
+}
+#typeeps{
+    height: 3em;
+}
+@media (max-width: 400px) {
+    #title{
+        text-align: center;
+         
+        gap: 1.5em; 
+             
+    }
+    .fa-arrow-left-long{
+        align-self: center;
+        top: 40%;
+        font-size: 1.2em;
+    }
 }
