--- a/register.css
+++ b/register.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 
 }
 body{
@@ -18,36 +19,87 @@ body{
 .registro{
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    
     background-color:  #ffffff57;
     text-transform: capitalize;
-    gap: 1em;
+    
     border: 2px solid #33a892;
-    width: 90%;
+    
+    border-radius: 1em;
     
     
+}
+#container{
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    gap: 1.5em;
+}
+.email{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+#email{
+    display: flex;
+    flex: 1;
+}
+
+input[type="email"]{
+    display: flex;
+   
+    
+    outline: none;
+    height: 2rem;
+    padding-left: 1em;
+    background-color: transparent;
+    border: #000 1px solid;
+    color: #22a374;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+input[type="text"]{
+    display: flex;
+   
+    
+    outline: none;
+    height: 2rem;
+    padding-left: 1em;
+    background-color: transparent;
+    border: #000 1px solid;
+    color: #22a374;
+    text-transform: capitalize;
+    text-decoration: none;
 }
 input{
     height: 2em;
 }
 #title{
     display: flex;
-    background-color: #22a374;
+    background-color: #33a892;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     position: relative;
+    height: 4em;
+    border-top-right-radius: 0.6em;
+    border-top-left-radius: 0.6em;
 }
 .fa-arrow-left-long{
+    display: flex;
+    
     position: absolute;
+    top: 25px;
     left: 1%;
-    color: #fff;
-    font-size: 1.5em;
+    color: #fffefe;
+    font-size: 1.2em;
 }
 #dataname{
     display: flex;
     flex: 1;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 .name{
     display: flex;
@@ -56,9 +108,8 @@ input{
     height: 3em;
     
 }
-#nameee{
-width: 100%;
-}
+
+
 
 
 
@@ -67,11 +118,13 @@ width: 100%;
     flex-direction: column;
     flex: 1;
     gap: 0.5em;
+   
 
 }
 .typedoc{
     display: flex;
     gap: 0.5em;
+    flex-wrap: 1;
 }
 
 .typedc{
@@ -83,10 +136,12 @@ width: 100%;
     flex: 1;
 }
 
+
+
 .datedata{
     display: flex;
-    gap: 1em;
-    flex: 1;
+    gap: 1em; 
+    flex: 1;   
 }
 
 #date{
@@ -96,6 +151,8 @@ width: 100%;
     
 }
 .fecha{
+    display: flex;
+    width: 100%;
     height: 2em;
 }
 #eps{
@@ -125,7 +182,13 @@ width: 100%;
     border: 0;
     height: 3rem;
     color: #fff;
+    border-radius: 1em;
     
+}
+#button:hover{
+    color: #6d93c9;
+    background-color: #fff;
+    border: 2px solid#6d93c9;
 }
 #typeeps{
     height: 3em;
@@ -133,10 +196,13 @@ width: 100%;
 @media (max-width: 400px) {
     #title{
         text-align: center;
-        display: flex;        
+        display:flex;
+        gap: 1.5em; 
+             
     }
     .fa-arrow-left-long{
         align-self: center;
         top: 40%;
+        font-size: 1.2em;
     }
 }
