--- a/cambio-contraseña.css
+++ b/cambio-contraseña.css
@@ -98,7 +98,7 @@ button{
     align-items: center;
     color: #fff;
     border-radius: 1rem;
-    background-color: ##6d93c9;
+    background-color: #6d93c9;
     flex: 1;
     padding: 1.5rem;
     text-decoration: none;
