--- a/password.css
+++ b/password.css
@@ -1,17 +1,18 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizzing:border-box;
 }
 
 body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: center;
+    
     align-items: center;
     font-family: sans-serif;
     padding: 1rem;
-    overflow: hidden;
+    
 }
 .email{
     display: flex;
@@ -20,7 +21,8 @@ body{
     border: #33a892 1px solid;
     text-transform: capitalize;
     gap: 1em;
-
+    position: relative;
+    top: 7em;
 }
 
 header{
